Harsha, IT, updated the class names to avoid conflicts with names used in other CSS files and has also modified the PartDetail page to improve item alignment in the mobile version.

--- a/src/components/EVPartsAccessories.css
+++ b/src/components/EVPartsAccessories.css
@@ -15,7 +15,7 @@
 
 
 /* Search Bar */
-.search-bar {
+.p-search-bar {
   width: 60%;
   padding: 10px;
   border: 1px solid #ccc;
